fix: reduce spacing

--- a/src/components/_cards/Project/Project.module.scss
+++ b/src/components/_cards/Project/Project.module.scss
@@ -44,7 +44,7 @@
       display: flex;
       flex-wrap: wrap;
       align-items: center;
-      gap: var(--spacing-s);
+      gap: var(--spacing-xs);
       margin-top: var(--spacing-lg);
 
       .language {
